{
    "name": "Controls",
    "maps": [
        {
            "name": "Action",
            "id": "df6aa3e1-8548-4e0a-b3a6-41e9c95b9e74",
            "actions": [
                {
                    "name": "BPMSync",
                    "type": "PassThrough",
                    "id": "e57d4e9c-63f8-45b5-b972-a87ae31d5bb8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShakePosition",
                    "type": "PassThrough",
                    "id": "dfd17a8c-7bdc-46f5-b175-7bba31d42a3a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TranslateUp",
                    "type": "PassThrough",
                    "id": "242a45fc-f8d2-4f5e-878c-074e66ca57ce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TranslateDown",
                    "type": "PassThrough",
                    "id": "6adb88f6-eb86-4474-b3c3-ecd32c45207b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TranslateRight",
                    "type": "PassThrough",
                    "id": "7b665e88-3077-4aa3-97b2-94d671495db3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TranslateLeft",
                    "type": "PassThrough",
                    "id": "93ed95dd-d158-4883-b72a-593833cde64a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScaleRotate4",
                    "type": "PassThrough",
                    "id": "1f42fe7f-4c63-4916-9e00-0e3814e6ddda",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PPPixelate",
                    "type": "PassThrough",
                    "id": "ddce8e0d-90a6-492d-9c2b-6173a1ed2271",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PPReflectTile",
                    "type": "PassThrough",
                    "id": "4b137d23-c9f1-44ab-a85b-a1239e13f507",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PPRGBScale",
                    "type": "PassThrough",
                    "id": "67e2e4de-caaf-4dca-89bb-32dcedae3957",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb2bbd32-c03a-4603-8bd2-dd8edbc5594c",
                    "path": "<MidiDevice>/control046",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BPMSync",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0100c99-c8db-4738-ad76-76a56e0f361e",
                    "path": "<MidiDevice>/control064",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShakePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24f80f3a-a2de-4b86-a510-92e0d201f425",
                    "path": "<MidiDevice>/control032",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranslateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3bf7075-a0f6-4039-9ca7-5d7a7beb7761",
                    "path": "<MidiDevice>/control033",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranslateDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de273dfa-f973-4036-8e61-f1166ffa7518",
                    "path": "<MidiDevice>/control034",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranslateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05444724-76db-41ab-9acd-3f752ffbe7c6",
                    "path": "<MidiDevice>/control035",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TranslateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd48b074-4eec-4de4-928f-16c10c712ff9",
                    "path": "<MidiDevice>/control065",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScaleRotate4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4a78ebe-c893-4f34-8e17-dc7290938cac",
                    "path": "<MidiDevice>/control045",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PPPixelate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b918390-8afa-4f5f-b51d-fd7a288106f2",
                    "path": "<MidiDevice>/control041",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PPReflectTile",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a48acf3e-f596-4ee8-9c46-8a0938ef5cfc",
                    "path": "<MidiDevice>/control042",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PPRGBScale",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MIDI control scheme",
            "bindingGroup": "MIDI control scheme",
            "devices": [
                {
                    "devicePath": "<MidiDevice>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}